evidence_library/ec2/us-east-1/security_groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0d3a9f0b108d87954",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Last_Review_Date",
                    "Value": "2026-01-08"
                },
                {
                    "Key": "Description",
                    "Value": "Security group used to control traffic to TwinGate host."
                },
                {
                    "Key": "Owner",
                    "Value": "Engineering"
                },
                {
                    "Key": "Reviewed_By",
                    "Value": "AJ Dehn"
                }
            ],
            "VpcId": "vpc-0e6463c734ce09ced",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:798094440826:security-group/sg-0d3a9f0b108d87954",
            "OwnerId": "798094440826",
            "GroupName": "bastion-host-sg",
            "Description": "Bastion Host Security Group",
            "IpPermissions": []
        },
        {
            "GroupId": "sg-0c8fdfe934b59f4fa",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0e6463c734ce09ced",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:798094440826:security-group/sg-0c8fdfe934b59f4fa",
            "OwnerId": "798094440826",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "798094440826",
                            "GroupId": "sg-0c8fdfe934b59f4fa"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0f1c8a3d07e49bb15",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-07f04ca6f41cbb18f",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:798094440826:security-group/sg-0f1c8a3d07e49bb15",
            "OwnerId": "798094440826",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "798094440826",
                            "GroupId": "sg-0f1c8a3d07e49bb15"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "41e0a717-8bb8-415a-9071-f2bdcd4aa494",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "41e0a717-8bb8-415a-9071-f2bdcd4aa494",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "vary": "accept-encoding",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "2494",
            "date": "Thu, 17 Sep 2026 02:00:36 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
